having to push every time I make a change...

--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
   <title>Bootstrap Example</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="css/style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
+    
+
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        <a class="navbar-brand" href="#" style="font-family:trebuchet MS;">Lattitude</a>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary" style="color: #f0ad4e">
+        <a class="navbar-brand" href="index.html" style="font-family:trebuchet MS;">Lattitude</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -16,22 +19,23 @@
     <div class="collapse navbar-collapse" id="navbarColor01" style="font-family: cursive">
         <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
         </li>
+            
         <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Plots</a>
-        <div class="dropdown-menu">
-        <a class="dropdown-item" href="MTemp.html">Max Temperature</a>
-        <a class="dropdown-item" href="Humidity.html">Humidity</a>
-        <a class="dropdown-item" href="Cloudiness.html">Cloudiness</a>
-        <a class="dropdown-item" href="WindSpeed.html">Wind Speed</a>
+        <div class="dropdown-menu" style=" ">
+            <a class="dropdown-item" href="MTemp.html">Max Temperature</a>
+            <a class="dropdown-item" href="Humidity.html">Humidity</a>
+            <a class="dropdown-item" href="Cloudiness.html">Cloudiness</a>
+            <a class="dropdown-item" href="WindSpeed.html">Wind Speed</a>
         </div>
     </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">Comparison</a>
+            <a class="nav-link" href="Comparison.html">Comparison</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">Data</a>
+            <a class="nav-link" href="Data.html">Data</a>
         </li>
         </ul>
     </div>
