--- a/Comparison.html
+++ b/Comparison.html
@@ -54,20 +54,20 @@
         <div class="card" style="background-color: #2B3E50; ">
             <div class="card-header" style="font-family:trebuchet MS; font-size: 25px; background:#4E5D6C;"> Comparison:
             Latitude vs X</div>
-                <div class="card-body text-center float-md-left" style="width: 500px">
+                <div class="card-body text-center float-left" style="width: 500px">
                     <h5 class="card-title">Vs. Max Temperature</h5>
                     <img src="images/Fig1.png" class="img-fluid" alt="Responsive image" style="height: 300px">
                 </div>
-                <div class="card-body text-center float-md-right" style="width: 500px">
+                <div class="card-body text-center float-right" style="width: 500px">
                     <h5 class="card-title">Vs. Humidity</h5>
                     <img src="images/Fig2.png" class="img-fluid" alt="Responsive image" style="height: 300px">
                 </div>
-                <div class="card-body text-centerfloat-md-left" style="width: 500px">
+                <div class="card-body text-center float-left" style="width: 500px">
                     <h5 class="card-title">Vs. Cloudiness</h5>
                     <img src="images/Fig3.png" class="img-fluid" alt="Responsive image" style="height: 300px">
                 </div>
         
-                <div class="card-body text-centerfloat-md-right" style="width: 500px">
+                <div class="card-body text-center float-right" style="width: 500px">
                     <h5 class="card-title">Vs. Wind speed</h5>
                     <img src="images/Fig4.png" class="img-fluid" alt="Responsive image" style="height: 300px">
                 </div>
